fixed z-index for global progress bar area. MB-4652
Reviewed-on: http://review.couchbase.org/12439
Tested-by: Dale Harvey <daleharvey@arandomurl.com>

--- a/priv/public/css/screen.css
+++ b/priv/public/css/screen.css
@@ -1177,7 +1177,7 @@ ul.tabs.dev-subset-switcher { padding-top: 3px; padding-bottom: 3px; padding-lef
     width: 100px;
 }
 
-#global_progress{position:absolute;right:0;z-index:1;margin:0.5em 0;min-height:27px;font-size:1em;background:#e6ebd4;border:2px solid #008000;color: #008000;-moz-border-radius:8px;-webkit-border-radius:8px;border-radius:8px;-moz-box-shadow:0 0 5px #ccc;-webkit-box-shadow:0 0 5px #ccc;box-shadow:0 0 5px #ccc; top:30px;padding-left: 25px; display:none; }
+#global_progress{position:absolute;right:0;z-index:1000;margin:0.5em 0;min-height:27px;font-size:1em;background:#e6ebd4;border:2px solid #008000;color: #008000;-moz-border-radius:8px;-webkit-border-radius:8px;border-radius:8px;-moz-box-shadow:0 0 5px #ccc;-webkit-box-shadow:0 0 5px #ccc;box-shadow:0 0 5px #ccc; top:30px;padding-left: 25px; display:none; }
 #global_progress ul { margin-top: 5px; }
 #global_progress .toggle{position:absolute;left:5px;top:7px}
 #global_progress li{margin-bottom:5px}
